fix bug with z-indexing

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,3 +1,6 @@
+.showdown-stats, .statbar {
+  z-index: 10000;
+}
 .showdown-stats {
   transform: translate(-20%);
   padding: 0px 5px 5px 5px;
